--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html {
     font-family: 'Poppins', sans-serif;
 }
 
+
 .container {
     width: var(--container-width);
     margin: 0 auto;
@@ -91,7 +92,7 @@ img {
 }
 
 .avatar {
-    width: 2.2rem; height: 2.2rem;
+    width: 3rem; height: 3rem;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -286,9 +287,64 @@ header .header__decorator-2 {
 
 .clients__container {
     display: grid;
+    place-items: center;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     margin-top: 8rem;
 }
+.clients__container div {
+    padding-top: 2rem;
+}
+.clients__container div:hover {
+    background-color: rgb(246, 246, 246);
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+}
 
 /* ==== Clients End ===== */
+
+
+/* ==== Testimonials Start ===== */
+
+.testimonials__title,
+#testimonials .lead {
+    text-align: center;
+}
+
+.testimonials__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+    background-color: var(--color-light);
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+    font-size: 0.88rem;
+    transition: var(--transition);
+}
+
+.testimonial:hover {
+    background-color: var(--primary-white);
+    border-color: var(--primary-color);
+    box-shadow: 0px 1px 5px rgb(30, 90, 250);
+    z-index: 1;
+}
+
+.testimonial .content {
+    text-align-last: left;
+    margin-bottom: 2rem;
+}
+
+.testimonials__client {
+    display: flex;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+/* ==== Testimonials End ===== */
