--- a/style.css
+++ b/style.css
@@ -199,7 +199,12 @@ header .header__image {
 .cta .logo {
     width: 2rem;
     font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
+
 
 header .header_socials {
     background-color: var(--primary-color);
@@ -247,19 +252,6 @@ header .header__decorator-2 {
     position: relative;
 }
 
-.about__image .blue {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-59%, -28%);
-    height: 15rem;
-    width: 450px;
-    
-    z-index: -1;
-}
-#second {
-    transform: translate(-41%, -28%);
-}
 
 .about__article {
     display: grid;
@@ -287,18 +279,28 @@ header .header__decorator-2 {
 
 .clients__container {
     display: grid;
-    place-items: center;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    margin-top: 8rem;
+    padding: 0 5rem;
+    margin-top: 5rem;
+    margin-bottom: 8rem;
+    gap: 2rem;
 }
+
 .clients__container div {
-    padding-top: 2rem;
+    background-color: var(--color-light);
+    height: 8rem;
+    width: 250px;
+    padding: 3rem;
+    display: grid; place-items: center;
+    transition: all 200ms ease ;
 }
+
 .clients__container div:hover {
-    background-color: rgb(246, 246, 246);
-    border: 1px solid transparent;
-    border-radius: 0.5rem;
+    background-color: var(--primary-white);
+    border-radius: 2px;
+    border: 1px solid var(--color-light);
+    margin-top: 0.2rem;
+    box-shadow: rgb(251 242 242) 1px 3px 14px;
 }
 
 /* ==== Clients End ===== */
@@ -332,6 +334,7 @@ header .header__decorator-2 {
 .testimonial:hover {
     background-color: var(--primary-white);
     border-color: var(--primary-color);
+    color: var(--primary-color);
     box-shadow: 0px 1px 5px rgb(30, 90, 250);
     z-index: 1;
 }
