--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ header .header__decorator-2 {
 /* ==== Clients Start ===== */
 
 #clients h1,
-#clients p {
+#clients > p {
     text-align: center;
 }
 
@@ -351,3 +351,68 @@ header .header__decorator-2 {
 }
 
 /* ==== Testimonials End ===== */
+
+
+/* ==== FAQ'S Start ===== */
+
+.faqs__title {
+    text-align: center;
+    margin: 5rem;
+}
+
+.faqs__container {
+    display: flex;
+    flex-direction: column;
+    width: 44%;
+    gap: 1rem;
+}
+
+.faq {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-light);
+    padding: 1.2rem 2rem;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.faq:hover {
+    border-color: var(--primary-color);
+    color: var(--primary-color);
+    box-shadow: 0px 1px 5px rgb(30, 90, 250);
+    margin-top: 0.2rem;
+}
+
+.faq__icon {
+    font-size: 2rem;
+    font-weight: 200;
+}
+
+.faq__question {
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.faq__answer {
+    padding-top: 1rem;
+    display: flex;
+    align-items: flex-end;
+}
+ 
+ .faq__top,
+ .faq__bottom
+ {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+ }
+
+ #invisible {
+    color: transparent;
+ }
+
+.closed > .faq__bottom {
+    display: none;
+}
+
+/* ==== FAQ'S End ===== */
