--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ header .header__decorator-2 {
     text-align: center;
     margin-bottom: 8rem;
 }
+
 .about__content p {
     line-height: 1.8rem;
     text-align: left;
@@ -290,15 +291,13 @@ header .header__decorator-2 {
     grid-template-columns: repeat(4, 1fr);
     padding: 0 5rem;
     margin-top: 5rem;
+    gap: 0.5rem;
     margin-bottom: 8rem;
-    gap: 2rem;
 }
 
 .clients__container div {
     background-color: var(--color-light);
     height: 8rem;
-    width: 250px;
-    padding: 3rem;
     display: grid; place-items: center;
     transition: all 200ms ease ;
 }
@@ -460,7 +459,7 @@ header .header__decorator-2 {
     border-radius: 2rem;
 }
 
-.subscribe__text > p {
+.subscribe__text  p {
     margin-top: 1.2rem;
     width: 90%;
 }
@@ -572,3 +571,227 @@ footer ul li a:hover {
     column-rule: var(--color-light);
     border-top: 1px solid var(--color-light);
 }
+
+
+
+/* ============ Responsive Code for Tablets =========== */
+
+@media screen and (max-width: 1024px) {
+    
+    .container {
+        width: var(--container-width-tablet);
+    }
+
+    h1 {
+        font-size: 4.2rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.9rem;
+    }
+
+    .lead {
+        width: 72%;
+        margin-bottom: 3rem;
+    }
+
+    section {
+        padding-bottom: 8rem;
+    }
+    
+    /* ======== Navigation Bar Start =============== */
+    
+    .nav__container {
+        position: relative;
+        width: 100vw;
+    }
+
+    .nav__logo {
+        position: relative;
+        left: 0;
+        margin-left: 2rem;
+        transform: translate(0);
+    }
+
+    .nav__items {
+        background-color: var(--primary-white);
+        position: fixed;
+        top: 6rem;
+        right: 0;
+        height: max-content;
+        width: 18rem;
+        box-shadow: -2rem 2rem 3rem rgba(0, 0, 0, 0.2);
+        flex-direction: column;
+        z-index: 3;
+        display: none;
+    }
+
+    .nav__items li  {
+        width: 100%;
+        height: 6rem;
+    }
+
+    .nav__items li a {
+        color: #000;
+        width: 100%;
+        height: 100%;
+        display: flex; align-items: center;
+        padding-left: 3rem;
+        transition: all 400ms ease;
+    }    
+
+    .nav__items li a:hover {
+        background-color: var(--primary-color);
+        color: var(--primary-white);
+    }
+
+    .nav__signin-signup {display: none;}
+
+    nav button {
+        display: inline-block;
+        margin-right: 1.4rem;
+        background-color: transparent;
+        color: var(--primary-white);
+        cursor: pointer;
+    }
+    
+    nav .close-btn {display: none;}
+    
+    nav button i {
+        font-size: 2.2rem;
+    }
+    
+    /* ======== Navigation Bar End =============== */
+
+    /* ======== Header Start =============== */
+
+    header {
+        padding-bottom: 5rem;
+        background-color: var(--primary-color);
+    }
+
+    header .header__title {
+        font-size: 4.2rem;
+    }
+
+    header .header__image {display: none;}
+
+    .cta {
+        margin-top: 3rem;
+    }
+
+    header .header_socials {
+        top: 30%;
+    }
+    header .header__decorator-2 {display: none;}
+    header .header__decorator-1 {
+        width: 8rem;
+        margin-top: 8rem;
+    }
+
+    /* ======== Header End =============== */
+
+
+    /* ======== About Start =============== */
+
+    #about {
+        margin-top: 7rem;
+    }
+
+    .about__article  {
+        margin-top: 6rem;
+    }
+
+    .about__content a {
+        padding: 1rem 4rem;
+        margin-top: 1rem;
+    }
+
+    /* ======== About End =============== */
+    
+    
+    /* ======== Clients Start =============== */
+
+    .clients__container {
+        padding: 0;
+        gap: 0.5rem;
+    }
+
+    /* ======== Clients End =============== */
+
+    
+    /* ==== Testimonials Start ===== */
+
+    .testimonials__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    /* ==== Testimonials End ===== */
+
+    
+    /* ==== FAQ'S Start ===== */
+
+    .faqs__container {
+        gap: 2rem;
+    }
+
+    .faqs_decorator {display: none;}
+
+    /* ==== FAQ'S End ===== */
+
+
+    /* ==== Download App Start ===== */ 
+
+    .downloadApp__content {
+        text-align: center;
+    }
+
+    .downloadApp__content .cta {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .downloadApp__content a {
+        width: 15rem;
+        gap: 2rem;
+    }
+
+    /* ==== Download App End ===== */
+
+    /* ==== Subscribe Start ===== */
+    .subscribe__container {
+        flex-direction: column;
+        gap: 4rem;
+    }
+
+    .subscribe__text h2 {text-align: center;}
+
+    .subscribe__text  p {
+        margin-top: 1.6rem;
+        width: 96%;
+        text-align: center;
+    }
+    
+    /* ==== Subscribe End ===== */
+
+    /* ==== Footer Start ===== */
+    .footer__container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    /* ==== Footer End ===== */
+
+}
+
+
+
+/* ============ Responsive Code for Mobile =========== */
+
+@media screen and (max-width: 600px) {
+   
+}
+
