--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ html {
     font-family: 'Poppins', sans-serif;
 }
 
+::-webkit-scrollbar {
+width: 10px;
+}
+
+::-webkit-scrollbar-track {
+background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+background: blue;
+}
+  
 body {
     display: flex;
     flex-direction: column;
@@ -114,7 +126,6 @@ section {
 nav {
     width: 100vw; height: 6rem;
     background-color: var(--primary-color);
-    /* box-shadow: rgb(1, 69, 247) 2px 2px 20px; */
     display: grid;
     place-items: center;
     position: fixed;
@@ -122,6 +133,12 @@ nav {
     left: 0;
     z-index: 2;
 }
+
+.window-scroll {
+    box-shadow: rgb(1, 69, 247) 2px 2px 20px;
+    border-bottom: 1px solid white;
+}
+
 .nav__container {
     display: flex;
     justify-content: space-between;
@@ -418,6 +435,7 @@ header .header__decorator-2 {
     color: transparent;
  }
 
+
 .closed > .faq__bottom {
     display: none;
 }
@@ -428,6 +446,7 @@ header .header__decorator-2 {
     left: 0;
     width: 12rem;
 }
+
 
 /* ==== FAQ'S End ===== */
 
@@ -687,6 +706,7 @@ footer ul li a:hover {
     header .header_socials {
         top: 30%;
     }
+
     header .header__decorator-2 {display: none;}
     header .header__decorator-1 {
         width: 8rem;
@@ -792,6 +812,163 @@ footer ul li a:hover {
 /* ============ Responsive Code for Mobile =========== */
 
 @media screen and (max-width: 600px) {
+    
+    html {
+        font-size: 14px;
+    }
+
+    .lead {
+        width: var(--container-width-phone);
+    }
+
+    /* ======== Navigation Bar Start====================== */
+    .nav__logo {
+        margin-left: 1rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .nav__items {
+        width: 100vw;
+    }
+
+    .nav__items li a {
+        padding: 0;
+        justify-content: center;
+    }
+
+    /* ======== Navigation Bar End ====================== */
+
+    /* ======== Header Start ====================== */
+    
+    header .header__title  {
+        padding-top: 10rem;
+        font-size: 3rem;
+    }
+
+    header .header_socials {display: none;}
+
+    .cta {
+        flex-direction: column;
+    }
+
+    .cta {
+        margin-top: 4rem;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .cta a {
+        width: 15rem;
+        gap: 2rem;
+    }
+
+    header .header__decorator-1 {
+      display: none;
+    }
+
+    /* ======== Header End ====================== */
+
+    /* ======== About Start ====================== */
    
+    .about__title {
+        font-size: 3.2rem;
+    }
+    .about__article {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 8rem;
+    }
+
+    .about__content p{
+        text-align: center;
+    }
+
+    .about__article:nth-child(2) .about__image {
+        grid-row: 1;
+    }
+
+    /* ======== About End ====================== */
+
+    /* ======== Clients Start ====================== */
+    
+    #clients {
+        margin-top: 6rem;
+    }
+
+    #clients h1 {
+        font-size: 3.2rem;
+    }
+
+    .clients__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    .clients__container div {
+        height: auto;
+    }
+
+    /* ======== Clients End ====================== */
+
+    /* ======== Testimonials Start ====================== */
+    .testimonials__title {
+        font-size: 3.2rem;
+    }
+
+    .testimonials__title, #testimonials .lead {
+        text-align: center;
+    }
+
+    .testimonial {
+        padding: 1rem;
+    }
+
+    /* ======== Testimonials End ====================== */
+
+    /* ======== FAQ's Start ====================== */
+    .faqs__title {
+        font-size: 3.2rem;
+    }
+
+    .faq__question {
+        font-size: 1.2rem;
+    }
+
+    /* ======== FAQ's End ====================== */
+    
+
+    /* ==== Download App Start ===== */ 
+
+    .downloadApp__container {
+        grid-template-columns: 1fr;
+    }
+    .downloadApp__title {
+        text-align: center;
+        font-size: 3.2rem;
+    }
+    .downloadApp__image {
+        display: none;
+    }
+
+    /* ==== Download App End ===== */ 
+
+    /* ==== Subscribe Start ===== */ 
+    .subscribe__container {
+        height: auto;
+    }
+    /* ==== Subscribe End ===== */ 
+
+    /* ==== Footer Start ===== */
+    .footer__container {
+        grid-template-columns: 1fr;
+        place-items: center;
+        text-align: center;
+    }
+
+    .footer__subscribe {
+       margin: auto;
+    }
+    /* ==== Footer End ===== */
+
 }
 
